--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
 
    <main>
+      <div class="long"></div>
       <div class="parent">
-         <h2>Parent</h2>
 
          <div class="square child child-1 animate"></div>
+         <div class="square child child-1 animate1"></div>
          <div class=" square child child-1 animate2"></div>
          <div class="square child child-1 animate3"></div>
          <div class=" square child child-1 animat4"></div>
@@ -23,10 +24,18 @@
          <div class=" square child child-1 animate6"></div>
          <div class="square child child-1 animate7"></div>
          <div class=" square child child-1 animate8"></div>
-         <div class="square child child-1 animate"></div>
-         <div class=" square child child-1 animate2"></div>
-         <div class="square child child-1 animate"></div>
-         <div class=" square child child-1 animate2"></div>
+         <div class="square child child-1 animate9"></div>
+         <div class=" square child child-1 animate10"></div>
+         <div class="square child child-1 animate11"></div>
+         <div class=" square child child-1 animate12"></div>
+         <div class="square child child-1 animate13"></div>
+         <div class="square child child-1 animate14"></div>
+         <div class="square child child-1 animate15"></div>
+         <div class="square child child-1 animate16"></div>
+         <div class="square child child-1 animate17"></div>
+         <div class="square child child-1 animate18"></div>
+         <div class="square child child-1 animate19"></div>
+         <div class="square child child-1 animate20"></div>
       </div>
 
       <!-- <div class="square animate">🔥</div>
